--- a/css/main.css
+++ b/css/main.css
@@ -462,6 +462,7 @@ img {
 
 .backdrop {
   position: fixed;
+  z-index: 120;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
@@ -478,14 +479,21 @@ img {
   padding: 40px;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 530px;
-  min-height: 580px;
+  max-width: 450px;
+  min-height: 609px;
   background: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition-duration: 250ms;
   transition-timing-function: var(--animation-proprety);
   justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 530px;
+    min-height: 580px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -623,9 +631,16 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   color: var(--main-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .policy-check__label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .policy-check__checkbox {
@@ -676,7 +691,7 @@ img {
 }
 
 .subscription {
-  flex-basis: calc(100% - 15px);
+  flex-basis: 100%;
 }
 
 @media screen and (min-width: 768px) {
@@ -878,15 +893,33 @@ img {
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero.mobile@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 480px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero.tablet.jpg);
   }
 }
 
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero.tablet@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero.desktop.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero.desktop@2x.jpg);
   }
 }
 
