--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,5 +1,6 @@
 .backdrop {
   position: fixed;
+  z-index: 120;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.2);
@@ -16,14 +17,19 @@
   padding: 40px;
   transform: translate(-50%, -50%);
   width: 100%;
-  max-width: 530px;
-  min-height: 580px;
+  max-width: 450px;
+  min-height: 609px;
   background: var(--main-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition-duration: 250ms;
   transition-timing-function: var(--animation-proprety);
   justify-content: center;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 530px;
+    min-height: 580px;
+  }
 }
 
 .backdrop.is-hidden {
