--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,5 +1,5 @@
 .subscription {
-  flex-basis: calc(100% - 15px);
+  flex-basis: 100%;
 
   @media screen and (min-width: 768px) {
     margin-top: 60px;
