--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,19 +8,19 @@
   margin-right: auto;
   margin-left: auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero/hero.mobile.jpg);
+    url(../images/hero/hero.mobile.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/hero.mobile@2x.jpg);
+      url(../images/hero/hero.mobile@2x.jpg);
   }
 
   @media screen and (min-width: 480px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/hero.tablet.jpg);
+      url(../images/hero/hero.tablet.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(../../images/hero/hero.tablet@2x.jpg);
@@ -29,10 +29,10 @@
 
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/hero.desktop.jpg);
+      url(../images/hero/hero.desktop.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/hero.desktop@2x.jpg);
+        url(../images/hero/hero.desktop@2x.jpg);
     }
   }
 
