--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -23,7 +23,7 @@
       url(../images/hero/hero.tablet.jpg);
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/hero.tablet@2x.jpg);
+        url(../images/hero/hero.tablet@2x.jpg);
     }
   }
 
